--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Blogging down town
 description: Web Developer from Oklingdeak Switzerland 
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://i1.wp.com/fortniteskins.net/wp-content/uploads/2018/04/tomatohead-skin-2.png?fit=1024%2C1024&amp;ssl=1
+avatar: https://pngimg.com/uploads/frog/frog_PNG35766.png
 
 #
 # Flags below are optional
